--- a/wallabag-api/Cargo.toml
+++ b/wallabag-api/Cargo.toml
@@ -2,5 +2,6 @@
 name = "wallabag-api"
 version = "0.1.0"
 authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
+edition = "2018"
 
 [dependencies]
