--- a/wallabag-gtk/Cargo.toml
+++ b/wallabag-gtk/Cargo.toml
@@ -2,7 +2,7 @@
 name = "wallabag-gtk"
 version = "0.1.0"
 authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
-
+edition = "2018"
 
 [dependencies]
 
