implement retrieve access token and entries
(PoC)

--- a/wallabag-api/Cargo.toml
+++ b/wallabag-api/Cargo.toml
@@ -5,3 +5,9 @@ authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
 edition = "2018"
 
 [dependencies]
+
+# TODO: restrict versions
+reqwest = "*"
+serde = "*"
+serde_derive = "*"
+serde_json = "*"
