--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -9,6 +9,7 @@ failure = "0.1.3"
 log = "0.4"
 simplelog = "0.5.3"
 clap = "2.32"
-diesel = { version = "1.3", features = ["sqlite"] }
+chrono = { version = "0.4", features = ["serde"] }
+rusqlite = "0.15"
 
 wallabag-api = { path = "../wallabag-api" }
