--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -11,5 +11,6 @@ simplelog = "0.5.3"
 clap = "2.32"
 chrono = { version = "0.4", features = ["serde"] }
 rusqlite = "0.15"
+serde_json = "1.0"
 
 wallabag-api = { path = "../wallabag-api" }
