--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -12,5 +12,7 @@ clap = "2.32"
 chrono = { version = "0.4", features = ["serde"] }
 rusqlite = "0.15"
 serde_json = "1.0"
+serde = "*"
+
 
 wallabag-api = { path = "../wallabag-api" }
