--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -13,6 +13,7 @@ chrono = { version = "0.4", features = ["serde"] }
 rusqlite = "0.15"
 serde_json = "1.0"
 serde = "*"
+reqwest = "0.9.5"
 
 
 wallabag-api = { path = "../wallabag-api" }
