begin adding debug logging
also make plans for splitting out backend into own crate. This is so I
can use the same backend across cli, tui, and gui clients. (or would it
be better to hide deps behind feature flags? eg. if feature "gtk"
included, than also include and build the gtk client. Either way, I want
to be able to install wallabag-cli without depending on gtk, curses,
etc.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [workspace]
 
 members = [
-  "wallabag-gtk",
   "wallabag-api",
-  "wallabag-tui",
+  "wallabag-backend",
   "wallabag-cli",
+  "wallabag-tui",
+  "wallabag-gtk",
 ]
