--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
 edition = "2018"
 
 [dependencies]
-failure = "0.1.3"
+failure = "0.1"
 log = "0.4"
 simplelog = "0.5.3"
 clap = "2.32"
 chrono = { version = "0.4", features = ["serde"] }
 rusqlite = "0.15"
 serde_json = "1.0"
-serde = "*"
+serde = "1.0"
 reqwest = "0.9.5"
 
 
