add initial support for reading from config file

--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -10,6 +10,9 @@ log = "0.4"
 simplelog = "0.5.3"
 clap = "2.32"
 chrono = "0.4"
+serde_derive = "1.0"
+serde = "1.0"
+toml = "0.4"
 
 wallabag-api = { path = "../wallabag-api" }
 wallabag-backend = { path = "../wallabag-backend" }
