--- a/wallabag-backend/Cargo.toml
+++ b/wallabag-backend/Cargo.toml
@@ -12,5 +12,6 @@ rusqlite = "0.15"
 serde_json = "1.0"
 serde = "1.0"
 reqwest = "0.9.5"
+serde_derive = "1.0"
 
 wallabag-api = { path = "../wallabag-api" }
