--- a/examples/wallabag-cli.toml
+++ b/examples/wallabag-cli.toml
@@ -1,4 +1,13 @@
 
+[cli]
+
+log_file = "wallabag-cli.log"
+
+# Valid levels are "off", "error", "warn", "info", "debug", and "trace".
+# Everything at and below the given level will be output in the log.
+# Case insensitive.
+log_level = "debug"
+
 
 [backend]
 db_file = "db.sqlite3"
