--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
 edition = "2018"
 
 [dependencies]
+structopt = "0.2.14"
 chrono = "0.4.6"
-clap = "2.32.0"
 failure = "0.1.3"
 log = "0.4.6"
 serde = "1.0.82"
