dual license under MIT and Apache

--- a/wallabag-api/Cargo.toml
+++ b/wallabag-api/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "wallabag-api"
+edition = "2018"
 version = "0.1.0"
 authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
-edition = "2018"
+license = "MIT OR Apache-2.0"
+description = "Client API library for Wallabag"
+repository = "https://github.com/swalladge/wallabag-rs"
+keywords = ["api", "wallabag"]
+categories = ["api-bindings"]
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 chrono = { version = "0.4.6", features = ["serde"] }
