--- a/wallabag-tui/Cargo.toml
+++ b/wallabag-tui/Cargo.toml
@@ -3,6 +3,11 @@ name = "wallabag-tui"
 version = "0.1.0"
 authors = ["Samuel Walladge <samuel@swalladge.id.au>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+
+# remove when ready to release
+publish = false
+
 
 [dependencies]
 failure = "0.1.3"
