fix section in config

--- a/wallabag-backend/Cargo.toml
+++ b/wallabag-backend/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT OR Apache-2.0"
 description = "Shared backend for Wallabag client apps"
 repository = "https://github.com/swalladge/wallabag-rs"
 keywords = ["wallabag"]
+
+[badges]
 maintenance = { status = "experimental" }
 
 [dependencies]
