--- a/wallabag-backend/Cargo.toml
+++ b/wallabag-backend/Cargo.toml
@@ -21,4 +21,4 @@ serde = "1.0.82"
 serde_derive = "1.0.82"
 serde_json = "1.0.33"
 
-wallabag-api = { path = "../wallabag-api" }
+wallabag-api = { version = "0.1.0", path = "../wallabag-api" }
