add readme to cargo metadata

--- a/wallabag-api/Cargo.toml
+++ b/wallabag-api/Cargo.toml
@@ -8,6 +8,7 @@ description = "Client API library for Wallabag"
 repository = "https://github.com/swalladge/wallabag-rs"
 keywords = ["api", "wallabag"]
 categories = ["api-bindings"]
+readme = "README.md"
 
 [badges]
 maintenance = { status = "actively-developed" }
