--- a/wallabag-backend/Cargo.toml
+++ b/wallabag-backend/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 description = "Shared backend for Wallabag client apps"
 repository = "https://github.com/swalladge/wallabag-rs"
 keywords = ["wallabag"]
+readme = "README.md"
 
 [badges]
 maintenance = { status = "experimental" }
