--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -8,6 +8,7 @@ description = "Command line client for Wallabag"
 repository = "https://github.com/swalladge/wallabag-rs"
 keywords = ["cli", "wallabag"]
 categories = ["command-line-interface"]
+readme = "README.md"
 
 [badges]
 maintenance = { status = "experimental" }
