--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -20,6 +20,7 @@ failure = "0.1.3"
 log = "0.4.6"
 serde = "1.0.82"
 serde_derive = "1.0.82"
+serde_json = "1.0.33"
 simplelog = "0.5.3"
 toml = "0.4.10"
 
