--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -22,5 +22,6 @@ serde = "1.0.82"
 serde_derive = "1.0.82"
 simplelog = "0.5.3"
 toml = "0.4.10"
+html2text = "0.1.8"
 
 wallabag-backend = { version = "0.1.0", path = "../wallabag-backend" }
