--- a/wallabag-gtk/Cargo.toml
+++ b/wallabag-gtk/Cargo.toml
@@ -10,5 +10,18 @@ readme = "README.md"
 publish = false
 
 [dependencies]
+chrono = "0.4.6"
+failure = "0.1.3"
+gtk = "0.5.0"
+log = "0.4.6"
+relm = "0.15.0"
+relm-attributes = "0.15.0"
+relm-derive = "0.15.0"
+serde = "1.0.82"
+serde_derive = "1.0.82"
+simplelog = "0.5.3"
+structopt = "0.2.14"
+toml = "0.4.10"
+webkit2gtk = "0.5.1"
 
-wallabag-api = { version = "0.1.0", path = "../wallabag-api" }
+wallabag-backend = { version = "0.1.0", path = "../wallabag-backend" }
