don't need serde_derive as direct dep
https://www.reddit.com/r/rust/comments/a8ykj8/til_you_dont_need_serde_derive_when_using_the/

--- a/wallabag-gtk/Cargo.toml
+++ b/wallabag-gtk/Cargo.toml
@@ -17,8 +17,7 @@ log = "0.4.6"
 relm = "0.15.0"
 relm-attributes = "0.15.0"
 relm-derive = "0.15.0"
-serde = "1.0.82"
-serde_derive = "1.0.82"
+serde = { version = "1.0.82", features = ["derive"] }
 simplelog = "0.5.3"
 structopt = "0.2.14"
 toml = "0.4.10"
