--- a/wallabag-api/Cargo.toml
+++ b/wallabag-api/Cargo.toml
@@ -17,6 +17,5 @@ maintenance = { status = "actively-developed" }
 chrono = { version = "0.4.6", features = ["serde"] }
 log = "0.4.6"
 reqwest = "0.9.5"
-serde = "1.0.82"
-serde_derive = "1.0.82"
+serde = { version = "1.0.82", features = ["derive"] }
 serde_json = "1.0.33"
