--- a/wallabag-backend/Cargo.toml
+++ b/wallabag-backend/Cargo.toml
@@ -18,8 +18,7 @@ failure = "0.1.3"
 log = "0.4.6"
 reqwest = "0.9.5"
 rusqlite = "0.15.0"
-serde = "1.0.82"
-serde_derive = "1.0.82"
+serde = { version = "1.0.82", features = ["derive"] }
 serde_json = "1.0.33"
 
 wallabag-api = { version = "0.1.0", path = "../wallabag-api" }
