--- a/wallabag-cli/Cargo.toml
+++ b/wallabag-cli/Cargo.toml
@@ -18,8 +18,7 @@ chrono = "0.4.6"
 failure = "0.1.3"
 html2text = "0.1.8"
 log = "0.4.6"
-serde = "1.0.82"
-serde_derive = "1.0.82"
+serde = { version = "1.0.82", features = ["derive"] }
 serde_json = "1.0.33"
 simplelog = "0.5.3"
 structopt = "0.2.14"
