--- a/wallabag-tui/Cargo.toml
+++ b/wallabag-tui/Cargo.toml
@@ -14,8 +14,7 @@ publish = false
 structopt = "0.2.14"
 failure = "0.1.3"
 log = "0.4.6"
-serde = "1.0.82"
-serde_derive = "1.0.82"
+serde = { version = "1.0.82", features = ["derive"] }
 simplelog = "0.5.3"
 termion = "1.5.1"
 tui = "0.3.0"
