--- a/wallabag-tui/Cargo.toml
+++ b/wallabag-tui/Cargo.toml
@@ -13,6 +13,7 @@ publish = false
 [dependencies]
 structopt = "0.2.14"
 failure = "0.1.3"
+html2text = "0.1.8"
 log = "0.4.6"
 serde = { version = "1.0.82", features = ["derive"] }
 simplelog = "0.5.3"
