--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 chrono = { version = "0.4.6", features = ["serde"] }
 log = "0.4.6"
-reqwest = "0.9.5"
+reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
 serde = { version = "1.0.82", features = ["derive"] }
 serde_json = "1.0.33"
+
+[dev-dependencies]
+tokio = "0.2.0-alpha.6"
