--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wallabag-api"
 edition = "2018"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["Samuel Walladge <samuel@swalladge.net>"]
 license = "MIT OR Apache-2.0"
 description = "Client API library for Wallabag"
@@ -16,9 +16,9 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 chrono = { version = "0.4.6", features = ["serde"] }
 log = "0.4.6"
-reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
+reqwest = { version = "0.10.0", features = ["json"] }
 serde = { version = "1.0.82", features = ["derive"] }
 serde_json = "1.0.33"
 
 [dev-dependencies]
-tokio = "0.2.0-alpha.6"
+tokio = { version = "0.2.13", features = ["macros"] }
