--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ surf = "2.0.0-alpha.0"
 serde_urlencoded = "0.6.1"
 
 [dev-dependencies]
-tokio = { version = "0.2.13", features = ["macros"] }
+async-std = "1.5.0"
