--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ chrono = { version = "0.4.6", features = ["serde"] }
 log = "0.4.6"
 serde = { version = "1.0.82", features = ["derive"] }
 serde_json = "1.0.33"
-surf = "2.0.0-alpha.0"
+surf = "2.2.0"
 serde_urlencoded = "0.6.1"
 
 [dev-dependencies]
