--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "wallabag-api"
 edition = "2018"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Samuel Walladge <samuel@swalladge.net>"]
 license = "MIT OR Apache-2.0"
 description = "Client API library for Wallabag"
-repository = "https://github.com/swalladge/wallabag-api"
+repository = "https://git.sr.ht/~swalladge/wallabag-api"
 keywords = ["api", "wallabag"]
 categories = ["api-bindings"]
 readme = "README.md"
@@ -14,12 +14,12 @@ readme = "README.md"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-chrono = { version = "0.4.6", features = ["serde"] }
-log = "0.4.6"
-serde = { version = "1.0.82", features = ["derive"] }
-serde_json = "1.0.33"
+chrono = { version = "0.4.19", features = ["serde"] }
+log = "0.4.14"
+serde = { version = "1.0.127", features = ["derive"] }
+serde_json = "1.0.66"
 surf = "2.2.0"
-serde_urlencoded = "0.6.1"
+serde_urlencoded = "0.7.0"
 
 [dev-dependencies]
-async-std = "1.5.0"
+async-std = "1.9.0"
