--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,3 +1,6 @@
+# Copyright 2020 Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
 on: [push, pull_request]
 
 name: CI
