--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@
 name = "wallabag-api"
 edition = "2018"
 version = "0.4.2"
-authors = ["Samuel Walladge <samuel@swalladge.net>"]
+authors = ["Casper Meijn <casper@meijn.net>", "Samuel Walladge <samuel@swalladge.net>"]
 license = "MIT OR Apache-2.0"
 description = "Client API library for Wallabag"
-repository = "https://git.sr.ht/~swalladge/wallabag-api"
+repository = "https://github.com/caspermeijn/wallabag-api"
 keywords = ["api", "wallabag"]
 categories = ["api-bindings"]
 readme = "README.md"
