ci: Add formatting checks

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,3 +16,22 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  rustfmt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: cargo --version && rustc --version
+      - run: cargo fmt --all --check
+
+  toml_validation:
+    runs-on: ubuntu-latest
+    container:
+      image: tamasfe/taplo:0.9.3
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+      - name: taplo lint
+        run: taplo lint
+      - name: taplo fmt
+        run: taplo fmt --check --diff
