--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,9 @@ on: [push, pull_request]
 
 name: CI
 
+env:
+  clippy_rust_version: '1.83'
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -35,3 +38,13 @@ jobs:
         run: taplo lint
       - name: taplo fmt
         run: taplo fmt --check --diff
+
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.clippy_rust_version }}
+          components: clippy
+      - run: cargo clippy --all-features --tests -- -D warnings
