--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,9 @@ chrono = { version = "0.4.19", features = ["serde"] }
 log = "0.4.14"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
-surf = "2.2.0"
 serde_urlencoded = "0.7.0"
+surf = "2.2.0"
+thiserror = "2"
 
 [dev-dependencies]
 async-std = "1.9.0"
